This software can be used under the license agreements as stated
in Go4License.txt file which is part of the distribution.
---------------------------------------------------------------

Changes in Go4 v5.1.x (April 2016)
1. Let configure default line width for objects draw. Useful for 4K monitors,
   where default line width (=1) is too tiny.  


Changes in Go4 v5.1.0 (March 2016)
1. One can register Start/Stop/Clear commands in any place of THttpServer hierarchy.
   Such commands recognized by the GUI and used when pressing Start/Stop analysis buttons
   or Clear analysis objects button 
2. Allow to use graphics in analysis. With "-gr" or "-graphics" option one enable ROOT graphics.
   User can create and update canvas or any other TG... object.
3. Support Python Scripting in analysis, either by GUI Analysis terminal command line or in compiled code: 
   A leading '$' in command line will execute python script of given name, occasonally TGo4Analysis object 
   is bound as go4 symbol. New Methods  ExecuteLine and ExecutePython in TGo4Analysis and TGo4EventProcessor to 
   invoke regular interpreter commands and python scripts,resp, from compiled code. File search dialog of 
   Analysis terminal in GUI will provide also file filters for *.py macros. 
   Thanks to Sven Augustin, MPI Heidelberg, for this idea and code support.   
4. Support Python Scripting in GUI command line (TGo4AbstractInterface binding). File search dialog of GUI
   commandline tool will provide also file filters for *.py macros. 
5. Analysis terminal window: added button to scroll down to end of output text.
6. Web GUI: Implemented analysis terminal window with macro command line (requires ROOT>=5.34.34)
7. TGo4Style Color Tool: Added selection menu to provide new ROOT6 named palettes.
   New entry "Settings/Panel defaults/Palette settings" to specify minimum and maximum valid ROOT palette indices for spinbox,
   and default palette index.