@@ -24,6 +24,8 @@ in Go4License.txt file which is part of the distribution.
 Changes in Go4 v5.1.x (April 2016)
 1. Let configure default line width for objects draw. Useful for 4K monitors,
    where default line width (=1) is too tiny.  
+2. Bugfix - when creating hotstart, TLatex object was add to picture specials twice,
+   which leads to crash when such picture need to be deleted.  
 
 
 Changes in Go4 v5.1.0 (March 2016)
